--- a/index.html
+++ b/index.html
@@ -26,16 +26,67 @@
   
   <!-- this is quick link -->
   <ol>
-    <li><a href="https://github.com/yasinbhuiyan/javascript/blob/main/01_javascript-basics/javascript-basics.js">javascript-basics</a></li>
-    <li><a href="https://github.com/yasinbhuiyan/javascript/blob/main/">javascript</a></li>
-    <li><a href="https://github.com/yasinbhuiyan/javascript/blob/main/">javascript</a></li>
-    <li><a href="https://github.com/yasinbhuiyan/javascript/blob/main/">javascript</a></li>
-    <li><a href="https://github.com/yasinbhuiyan/javascript/blob/main/">javascript</a></li>
-    <li><a href="https://github.com/yasinbhuiyan/javascript/blob/main/">javascript</a></li>
-    <li><a href="https://github.com/yasinbhuiyan/javascript/blob/main/">javascript</a></li>
-    <li><a href="https://github.com/yasinbhuiyan/javascript/blob/main/">javascript</a></li>
-    <li><a href="https://github.com/yasinbhuiyan/javascript/blob/main/">javascript</a></li>
-    
+    <li>
+      <a href="https://github.com/yasinbhuiyan/javascript/tree/main/01_javascript-basics">javascript-basics<span class="point">code</span></a>
+      <a href="./01_javascript-basics/javascript-basics.html">javascript-basics<span class="point">output</span></a>
+    </li>
+    <li>
+      <a href="https://github.com/yasinbhuiyan/javascript/tree/main/01_fname">javascript<span class="point">code</span></a>
+      <a href="01_fname">javascript<span class="point">output</span></a>
+    </li>
+    <li>
+      <a href="https://github.com/yasinbhuiyan/javascript/tree/main/01_fname">javascript<span class="point">code</span></a>
+      <a href="01_fname">javascript<span class="point">output</span></a>
+    </li>
+    <li>
+      <a href="https://github.com/yasinbhuiyan/javascript/tree/main/01_fname">javascript<span class="point">code</span></a>
+      <a href="01_fname">javascript<span class="point">output</span></a>
+    </li>
+    <li>
+      <a href="https://github.com/yasinbhuiyan/javascript/tree/main/01_fname">javascript<span class="point">code</span></a>
+      <a href="01_fname">javascript<span class="point">output</span></a>
+    </li>
+    <li>
+      <a href="https://github.com/yasinbhuiyan/javascript/tree/main/01_fname">javascript<span class="point">code</span></a>
+      <a href="01_fname">javascript<span class="point">output</span></a>
+    </li>
+    <li>
+      <a href="https://github.com/yasinbhuiyan/javascript/tree/main/01_fname">javascript<span class="point">code</span></a>
+      <a href="01_fname">javascript<span class="point">output</span></a>
+    </li>
+    <li>
+      <a href="https://github.com/yasinbhuiyan/javascript/tree/main/01_fname">javascript<span class="point">code</span></a>
+      <a href="01_fname">javascript<span class="point">output</span></a>
+    </li>
+    <li>
+      <a href="https://github.com/yasinbhuiyan/javascript/tree/main/01_fname">javascript<span class="point">code</span></a>
+      <a href="01_fname">javascript<span class="point">output</span></a>
+    </li>
+    <li>
+      <a href="https://github.com/yasinbhuiyan/javascript/tree/main/01_fname">javascript<span class="point">code</span></a>
+      <a href="01_fname">javascript<span class="point">output</span></a>
+    </li>
+    <li>
+      <a href="https://github.com/yasinbhuiyan/javascript/tree/main/01_fname">javascript<span class="point">code</span></a>
+      <a href="01_fname">javascript<span class="point">output</span></a>
+    </li>
+    <li>
+      <a href="https://github.com/yasinbhuiyan/javascript/tree/main/01_fname">javascript<span class="point">code</span></a>
+      <a href="01_fname">javascript<span class="point">output</span></a>
+    </li>
+    <li>
+      <a href="https://github.com/yasinbhuiyan/javascript/tree/main/01_fname">javascript<span class="point">code</span></a>
+      <a href="01_fname">javascript<span class="point">output</span></a>
+    </li>
+    <li>
+      <a href="https://github.com/yasinbhuiyan/javascript/tree/main/01_fname">javascript<span class="point">code</span></a>
+      <a href="01_fname">javascript<span class="point">output</span></a>
+    </li>
+    <li>
+      <a href="https://github.com/yasinbhuiyan/javascript/tree/main/01_fname">javascript<span class="point">code</span></a>
+      <a href="01_fname">javascript<span class="point">output</span></a>
+    </li>
+
   </ol>
   <a class="css_link" href="https://yasinbhuiyan.github.io/javascript/">Learn about JS</a>
 </body>
