--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  
+
   <!-- favicon -->
   <link rel="shortcut icon" href="./images/icon.png" type="image/x-icon" />
-  
+
   <!-- common style -->
   <link rel="stylesheet" href="./style.css">
-  
+
   <!-- custom style -->
   <link rel="stylesheet" href="./index.css">
-  
+
   <!-- title -->
   <title>JavaScript</title>
 </head>
@@ -23,71 +23,71 @@
   <h1 id="start"><a href="#">Learn about JavaScript</a></h1>
   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla voluptas dignissimos dolore corrupti quo quibusdam, a rem omnis impedit eveniet!</p>
   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis suscipit est reprehenderit, quas accusamus cum dolorum, voluptatum eveniet, neque voluptas cumque consequuntur quod numquam nisi. Sit, molestiae, nam! Veritatis, illum!</p>
-  
+
   <!-- this is quick link -->
   <ol>
     <li>
-      <a href="https://github.com/yasinbhuiyan/javascript/tree/main/01_javascript-basics">javascript-basics<span class="point">code</span></a>
+      <a href="https://github.com/yasinbhouan/javascript/tree/main/01_javascript-basics">javascript-basics<span class="point">code</span></a>
       <a href="./01_javascript-basics/javascript-basics.html">javascript-basics<span class="point">output</span></a>
     </li>
     <li>
-      <a href="https://github.com/yasinbhuiyan/javascript/tree/main/01_fname">javascript<span class="point">code</span></a>
+      <a href="https://github.com/yasinbhouan/javascript/tree/main/01_fname">javascript<span class="point">code</span></a>
       <a href="01_fname">javascript<span class="point">output</span></a>
     </li>
     <li>
-      <a href="https://github.com/yasinbhuiyan/javascript/tree/main/01_fname">javascript<span class="point">code</span></a>
+      <a href="https://github.com/yasinbhouan/javascript/tree/main/01_fname">javascript<span class="point">code</span></a>
       <a href="01_fname">javascript<span class="point">output</span></a>
     </li>
     <li>
-      <a href="https://github.com/yasinbhuiyan/javascript/tree/main/01_fname">javascript<span class="point">code</span></a>
+      <a href="https://github.com/yasinbhouan/javascript/tree/main/01_fname">javascript<span class="point">code</span></a>
       <a href="01_fname">javascript<span class="point">output</span></a>
     </li>
     <li>
-      <a href="https://github.com/yasinbhuiyan/javascript/tree/main/01_fname">javascript<span class="point">code</span></a>
+      <a href="https://github.com/yasinbhouan/javascript/tree/main/01_fname">javascript<span class="point">code</span></a>
       <a href="01_fname">javascript<span class="point">output</span></a>
     </li>
     <li>
-      <a href="https://github.com/yasinbhuiyan/javascript/tree/main/01_fname">javascript<span class="point">code</span></a>
+      <a href="https://github.com/yasinbhouan/javascript/tree/main/01_fname">javascript<span class="point">code</span></a>
       <a href="01_fname">javascript<span class="point">output</span></a>
     </li>
     <li>
-      <a href="https://github.com/yasinbhuiyan/javascript/tree/main/01_fname">javascript<span class="point">code</span></a>
+      <a href="https://github.com/yasinbhouan/javascript/tree/main/01_fname">javascript<span class="point">code</span></a>
       <a href="01_fname">javascript<span class="point">output</span></a>
     </li>
     <li>
-      <a href="https://github.com/yasinbhuiyan/javascript/tree/main/01_fname">javascript<span class="point">code</span></a>
+      <a href="https://github.com/yasinbhouan/javascript/tree/main/01_fname">javascript<span class="point">code</span></a>
       <a href="01_fname">javascript<span class="point">output</span></a>
     </li>
     <li>
-      <a href="https://github.com/yasinbhuiyan/javascript/tree/main/01_fname">javascript<span class="point">code</span></a>
+      <a href="https://github.com/yasinbhouan/javascript/tree/main/01_fname">javascript<span class="point">code</span></a>
       <a href="01_fname">javascript<span class="point">output</span></a>
     </li>
     <li>
-      <a href="https://github.com/yasinbhuiyan/javascript/tree/main/01_fname">javascript<span class="point">code</span></a>
+      <a href="https://github.com/yasinbhouan/javascript/tree/main/01_fname">javascript<span class="point">code</span></a>
       <a href="01_fname">javascript<span class="point">output</span></a>
     </li>
     <li>
-      <a href="https://github.com/yasinbhuiyan/javascript/tree/main/01_fname">javascript<span class="point">code</span></a>
+      <a href="https://github.com/yasinbhouan/javascript/tree/main/01_fname">javascript<span class="point">code</span></a>
       <a href="01_fname">javascript<span class="point">output</span></a>
     </li>
     <li>
-      <a href="https://github.com/yasinbhuiyan/javascript/tree/main/01_fname">javascript<span class="point">code</span></a>
+      <a href="https://github.com/yasinbhouan/javascript/tree/main/01_fname">javascript<span class="point">code</span></a>
       <a href="01_fname">javascript<span class="point">output</span></a>
     </li>
     <li>
-      <a href="https://github.com/yasinbhuiyan/javascript/tree/main/01_fname">javascript<span class="point">code</span></a>
+      <a href="https://github.com/yasinbhouan/javascript/tree/main/01_fname">javascript<span class="point">code</span></a>
       <a href="01_fname">javascript<span class="point">output</span></a>
     </li>
     <li>
-      <a href="https://github.com/yasinbhuiyan/javascript/tree/main/01_fname">javascript<span class="point">code</span></a>
+      <a href="https://github.com/yasinbhouan/javascript/tree/main/01_fname">javascript<span class="point">code</span></a>
       <a href="01_fname">javascript<span class="point">output</span></a>
     </li>
     <li>
-      <a href="https://github.com/yasinbhuiyan/javascript/tree/main/01_fname">javascript<span class="point">code</span></a>
+      <a href="https://github.com/yasinbhouan/javascript/tree/main/01_fname">javascript<span class="point">code</span></a>
       <a href="01_fname">javascript<span class="point">output</span></a>
     </li>
 
   </ol>
-  <a class="css_link" href="https://yasinbhuiyan.github.io/javascript/">Learn about JS</a>
+  <a class="css_link" href="https://yasinbhouan.github.io/javascript/">Learn about JS</a>
 </body>
 </html>
