--- a/02_number-math/number-math.html
+++ b/02_number-math/number-math.html
@@ -20,6 +20,6 @@
 </head>
 <body>
   <p class="no_output">no output needed see the JavaScript code</p>
-  <script src="number-math.js"></script>
+  <script src="./number-math.js"></script>
 </body>
 </html>
