--- a/04_variables/variables.html
+++ b/04_variables/variables.html
@@ -16,10 +16,10 @@
   <link rel="stylesheet" href="./float.css">
 
   <!-- title -->
-  <title>Javascript Basics</title>
+  <title>Javascript</title>
 </head>
 <body>
 
-  <script src="./javascript-basics.js"></script>
+  <script src="./variables.js"></script>
 </body>
 </html>
