link will open in new page

--- a/02_number-math/number-math.html
+++ b/02_number-math/number-math.html
@@ -13,10 +13,10 @@
   <link rel="stylesheet" href="../style.css">
 
   <!-- custom style -->
-  <link rel="stylesheet" href="./float.css">
+  <link rel="stylesheet" href="./style.css">
 
   <!-- title -->
-  <title>Number Math</title>
+  <title>JavaScript Number & Math</title>
 </head>
 <body>
   <p class="no_output">no output needed see the JavaScript code</p>
