--- a/sample.html
+++ b/sample.html
@@ -13,13 +13,13 @@
   <link rel="stylesheet" href="../style.css">
 
   <!-- custom style -->
-  <link rel="stylesheet" href="./float.css">
+  <link rel="stylesheet" href="./style.css">
 
   <!-- title -->
   <title>Javascript</title>
 </head>
 <body>
-
+  <p class="no_output">no output needed see the JavaScript code</p>
   <script src="./javascript.js"></script>
 </body>
 </html>
