--- a/01_javascript-basics/javascript-basics.html
+++ b/01_javascript-basics/javascript-basics.html
@@ -13,7 +13,7 @@
   <link rel="stylesheet" href="../style.css">
 
   <!-- custom style -->
-  <link rel="stylesheet" href="./float.css">
+  <link rel="stylesheet" href="./style.css">
 
   <!-- title -->
   <title>Javascript Basics</title>
