--- a/03_strings/strings.html
+++ b/03_strings/strings.html
@@ -14,14 +14,14 @@
   <link rel="stylesheet" href="../style.css">
 
   <!-- custom style -->
-  <link rel="stylesheet" href="./float.css">
+  <link rel="stylesheet" href="./style.css">
 
   <!-- title -->
-  <title>Javascript</title>
+  <title>Javascript Strings</title>
 </head>
 
 <body>
-
+  <p class="no_output">no output needed see the JavaScript code</p>
   <script src="./strings.js"></script>
 </body>
 
