--- a/04_variables/variables.html
+++ b/04_variables/variables.html
@@ -13,13 +13,13 @@
   <link rel="stylesheet" href="../style.css">
 
   <!-- custom style -->
-  <link rel="stylesheet" href="./float.css">
+  <link rel="stylesheet" href="./style.css">
 
   <!-- title -->
-  <title>Javascript</title>
+  <title>Javascript Variables</title>
 </head>
 <body>
-
+  <p class="no_output">no output needed see the JavaScript code</p>
   <script src="./variables.js"></script>
 </body>
 </html>
