--- a/03_strings/strings.html
+++ b/03_strings/strings.html
@@ -14,7 +14,7 @@
   <link rel="stylesheet" href="../style.css">
 
   <!-- custom style -->
-  <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="../style.css">
 
   <!-- title -->
   <title>Javascript Strings</title>
