--- a/sample.html
+++ b/sample.html
@@ -10,7 +10,7 @@
   <link rel="shortcut icon" href="../images/icon.png" type="image/x-icon" />
 
   <!-- common style -->
-  <link rel="stylesheet" href="../style.css">
+  <link rel="stylesheet" href="./style.css">
 
   <!-- custom style -->
   <link rel="stylesheet" href="./style.css">
@@ -20,6 +20,6 @@
 </head>
 <body>
   <p class="no_output">no output needed see the JavaScript code</p>
-  <script src="./javascript.js"></script>
+  <script src="./index.js"></script>
 </body>
 </html>
