--- a/04_variables/variables.html
+++ b/04_variables/variables.html
@@ -1,25 +1,55 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
 <head>
   <!-- meta tag -->
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+  <!-- title, description, author -->
+  <title>Variable</title>
+  <meta name="description" content="Description of the page">
+  <meta name="author" content="Author Name">
+
+  <!-- open graph protocol -->
+  <meta property="og:title" content="Title">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://example.com">
+  <meta property="og:description" content="Description of the page">
+  <meta property="og:image" content="https://example.com/image.jpg">
 
   <!-- favicon -->
-  <link rel="shortcut icon" href="../images/icon.png" type="image/x-icon" />
+  <link rel="shortcut icon" href="../images/icon.png" type="image/x-icon">
+  <link rel="icon" href="../images/icon.svg" type="image/svg+xml">
+  <link rel="apple-touch-icon" href="../images/icon.png">
 
-  <!-- common style -->
-  <link rel="stylesheet" href="../style.css">
-
-  <!-- custom style -->
-  <link rel="stylesheet" href="../style.css">
-
-  <!-- title -->
-  <title>Javascript Variables</title>
+  <!-- CSS stylesheets -->
+  <link rel="stylesheet" href="../css/style.css">
 </head>
+
 <body>
-  <p class="no_output">no output needed see the JavaScript code</p>
-  <script src="./variables.js"></script>
+  <!-- header of the website -->
+  <header>
+
+  </header>
+
+  <!-- navigation links are here -->
+  <nav>
+
+  </nav>
+
+  <!-- main content of the page -->
+  <main>
+    <p class="no_output">No output needed for this page.</p>
+  </main>
+
+  <!-- footer of the website -->
+  <footer>
+
+  </footer>
+
+  <!-- JavaScript files -->
+  <script src="./variable.js"></script>
 </body>
+
 </html>
