--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- title, description, author -->
-  <title>Title</title>
+  <title>JavaScript</title>
   <meta name="description" content="Description of the page">
   <meta name="author" content="Author Name">
 
@@ -61,27 +61,27 @@
           <a target="_blank" href="./03_strings\strings.html">strings<span class="point">output</span></a>
         </li>
         <li>
-          <a target="_blank" href="https://github.com/yasinbhouan/javascript/tree/main/04_variables">strings<span class="point">code</span></a>
-          <a target="_blank" href="./04_variables\variables.html">fname<span class="point">output</span></a>
+          <a target="_blank" href="https://github.com/yasinbhouan/javascript/tree/main/04_variables">variables<span class="point">code</span></a>
+          <a target="_blank" href="./04_variables\variables.html">variables<span class="point">output</span></a>
         </li>
         <li>
-          <a target="_blank" href="https://github.com/yasinbhouan/javascript/tree/main/05_if-else">strings<span class="point">code</span></a>
-          <a target="_blank" href="./05_if-else\if-else.html">fname<span class="point">output</span></a>
+          <a target="_blank" href="https://github.com/yasinbhouan/javascript/tree/main/05_if-else">if-else<span class="point">code</span></a>
+          <a target="_blank" href="./05_if-else\if-else.html">if-else<span class="point">output</span></a>
         </li>
         <li>
-          <a target="_blank" href="https://github.com/yasinbhouan/javascript/tree/main/00_fname">strings<span class="point">code</span></a>
+          <a target="_blank" href="https://github.com/yasinbhouan/javascript/tree/main/00_fname">fname<span class="point">code</span></a>
           <a target="_blank" href="./00_fname">fname<span class="point">output</span></a>
         </li>
         <li>
-          <a target="_blank" href="https://github.com/yasinbhouan/javascript/tree/main/00_fname">strings<span class="point">code</span></a>
+          <a target="_blank" href="https://github.com/yasinbhouan/javascript/tree/main/00_fname">fname<span class="point">code</span></a>
           <a target="_blank" href="./00_fname">fname<span class="point">output</span></a>
         </li>
         <li>
-          <a target="_blank" href="https://github.com/yasinbhouan/javascript/tree/main/00_fname">strings<span class="point">code</span></a>
+          <a target="_blank" href="https://github.com/yasinbhouan/javascript/tree/main/00_fname">fname<span class="point">code</span></a>
           <a target="_blank" href="./00_fname">fname<span class="point">output</span></a>
         </li>
         <li>
-          <a target="_blank" href="https://github.com/yasinbhouan/javascript/tree/main/00_fname">strings<span class="point">code</span></a>
+          <a target="_blank" href="https://github.com/yasinbhouan/javascript/tree/main/00_fname">fname<span class="point">code</span></a>
           <a target="_blank" href="./00_fname">fname<span class="point">output</span></a>
         </li>
       </ol>
