--- a/05_if-else/if-else.html
+++ b/05_if-else/if-else.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- title, description, author -->
-  <title>Title</title>
+  <title>if else</title>
   <meta name="description" content="Description of the page">
   <meta name="author" content="Author Name">
 
@@ -19,12 +19,12 @@
   <meta property="og:image" content="https://example.com/image.jpg">
 
   <!-- favicon -->
-  <link rel="shortcut icon" href="../images/icon.png" type="image/x-icon">
-  <link rel="icon" href="../images/icon.svg" type="image/svg+xml">
-  <link rel="apple-touch-icon" href="../images/icon.png">
+  <link rel="shortcut icon" href="./images/icon.png" type="image/x-icon">
+  <link rel="icon" href="./images/icon.svg" type="image/svg+xml">
+  <link rel="apple-touch-icon" href="./images/icon.png">
 
   <!-- CSS stylesheets -->
-  <link rel="stylesheet" href="../css/style.css">
+  <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
@@ -40,7 +40,7 @@
 
   <!-- main content of the page -->
   <main>
-
+    <p class="no_output">No output needed for this page.</p>
   </main>
 
   <!-- footer of the website -->
@@ -49,7 +49,7 @@
   </footer>
 
   <!-- JavaScript files -->
-  <script src="../js/index.js"></script>
+  <script src="./if-else.js"></script>
 </body>
 
 </html>
