--- a/sample.html
+++ b/sample.html
@@ -49,7 +49,7 @@
   </footer>
 
   <!-- JavaScript files -->
-  <script src="../js/index.js"></script>
+  <script src="./js/index.js"></script>
 </body>
 
 </html>
