--- a/05_if-else/if-else.html
+++ b/05_if-else/if-else.html
@@ -19,12 +19,12 @@
   <meta property="og:image" content="https://example.com/image.jpg">
 
   <!-- favicon -->
-  <link rel="shortcut icon" href="./images/icon.png" type="image/x-icon">
-  <link rel="icon" href="./images/icon.svg" type="image/svg+xml">
-  <link rel="apple-touch-icon" href="./images/icon.png">
+  <link rel="shortcut icon" href="../images/icon.png" type="image/x-icon">
+  <link rel="icon" href="../images/icon.svg" type="image/svg+xml">
+  <link rel="apple-touch-icon" href="../images/icon.png">
 
   <!-- CSS stylesheets -->
-  <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="../css/style.css">
 </head>
 
 <body>
